language/move-compiler/tests/move_check/typing/vector_no_type_inferred.move
module 0x42::Test {
    fun t() {
        // should error as it cannot infer a type
        vector[];
    }
}
